# food-agent

./: .env.example  .gitignore  INGREDIENTS_TO_CHECKOUT_PLAN.md  PHASE0_SHOPIFY_EMBED_SPIKE.md  PLAN.md  README.md  SUPPLEMENT_PLAN.md  V1_EMBEDDED_SUPPLEMENT_CHECKOUT_PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_phase1_foundation.py  0002_phase3_inventory.py
data/examples/: shopify_embed_spike_results.json  shopify_mcp_spike_results.json  walmart_smoke_items.json
data/recipes/: README.md  curated_recipe_seed.json
scripts/: build_recipe_corpus.py  check_browser_cloud.py  run_checkout_agent.py  run_evals.py  run_shopify_embed_spike.py  seed_recipes.py  verify_shopify_mcp.py
src/shopper/: __init__.py  config.py  db.py  main.py  models.py  orchestrator.py  schemas.py
src/shopper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_services.py
tests/eval/: test_nutrition_eval.py
tests/integration/: test_app_startup.py  test_runs_api.py  test_supplement_runs_api.py
tests/unit/: test_browser_checkout_agent.py  test_browser_profile_manager.py  test_budget_checker.py  test_checkout_embed_probe.py  test_context_assembler.py  test_critic_llm.py  test_evaluation_runner.py  test_graph_routing.py  test_graph_tracing.py  test_grocery_category_evaluator.py  test_grocery_eval_dataset.py  test_grocery_validator.py  test_ingredient_aggregator.py  test_meal_plan_validator.py  test_meal_selector_llm.py  test_memory_store.py  (+15 more)
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
(+683 files in other folders)
